[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/pick_axe_symbol.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/power_symbol_yellow.png" type="Texture" id=2]
[ext_resource path="res://fonts/SuperWhite.fnt" type="BitmapFont" id=3]
[ext_resource path="res://src/UI/HUD.gd" type="Script" id=4]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_bottom = -10.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MineralsBar" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 310.0
margin_bottom = 16.0

[node name="PickaxeLogo" type="TextureRect" parent="VBoxContainer/MineralsBar"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 1 )

[node name="Counter" type="Label" parent="VBoxContainer/MineralsBar"]
margin_left = 20.0
margin_top = 2.0
margin_right = 27.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slash" type="Label" parent="VBoxContainer/MineralsBar"]
margin_left = 31.0
margin_top = 2.0
margin_right = 37.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 3 )
text = "/"

[node name="GoalNumber" type="Label" parent="VBoxContainer/MineralsBar"]
margin_left = 41.0
margin_top = 2.0
margin_right = 55.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.752941, 0.752941, 0.752941, 1 )
custom_fonts/font = ExtResource( 3 )
text = "50"

[node name="LifeBar" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 310.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerLogo" type="TextureRect" parent="VBoxContainer/LifeBar"]
margin_right = 16.0
margin_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )
stretch_mode = 3

[node name="HitpointsMargin" type="MarginContainer" parent="VBoxContainer/LifeBar"]
margin_left = 20.0
margin_right = 310.0
margin_bottom = 2.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/margin_top = 2

[node name="HitpointsHolder" type="HBoxContainer" parent="VBoxContainer/LifeBar/HitpointsMargin"]
margin_top = 2.0
margin_right = 290.0
margin_bottom = 2.0
custom_constants/separation = 0
